# RCA5

./: README.md  bigworld.world  gazebo_client.sh  gazebo_server.sh  launch_gazebo.sh  smallworld.world
build-robot_control-Desktop-Debug/: Makefile  robot_control
models/camera/: model.sdf
models/hokuyo/: model.sdf
robot_control/: CMakeLists.txt  main.cpp  robot_control.pro
robot_control/fuzzy_controller/: LocalObstacleAvoidance_V1.fll  LocalObstacleAvoidance_V2.fll  LocalObstacleAvoidance_V3.fll
robot_control/includes/: LocalObstacleAvoidance_V1.fll
robot_control/otherFiles/: .~lock.Coordinates.csv#  Coordinates.csv  Coordinates2.csv  Coordinates50P.csv  CoordinatesNew.csv  CoordinatesNew2.csv  CoordinatesNew3.csv  CoordinatesNormalDis.csv
robot_control/src/: Callback.cpp  Callback.h  Fuzzy_control.cpp  Fuzzy_control.h  Localization.cpp  Localization.h  MarbleDetection.cpp  MarbleDetection.h  PathPlanning.cpp  PathPlanning.h  QLearning.cpp  QLearning.h  Source.cpp  main.cpp
robot_control/src/mains/: ..mainFcpp  Source.cpp  mainAI-QL.cpp  mainAI.cpp  mainQLearning.cpp  mainROB-BF.cpp  mainROB-WF.cpp  mainVIS.cpp
